; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr/file_io/unix/extr_filepath_util.c_apr_filepath_list_split_impl.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr/file_io/unix/extr_filepath_util.c_apr_filepath_list_split_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APR_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @apr_filepath_list_split_impl(i32** %0, i8* %1, i8 signext %2, i32* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca [2 x i8], align 1
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8 %2, i8* %7, align 1
  store i32* %3, i32** %8, align 8
  %15 = bitcast [2 x i8]* %12 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %15, i8 0, i64 2, i1 false)
  %16 = load i8, i8* %7, align 1
  %17 = getelementptr inbounds [2 x i8], [2 x i8]* %12, i64 0, i64 0
  store i8 %16, i8* %17, align 1
  %18 = load i32*, i32** %8, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i8* @apr_pstrdup(i32* %18, i8* %19)
  store i8* %20, i8** %9, align 8
  store i32 0, i32* %14, align 4
  %21 = load i8*, i8** %9, align 8
  store i8* %21, i8** %11, align 8
  br label %22

22:                                               ; preds = %35, %4
  %23 = load i8*, i8** %11, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %38

25:                                               ; preds = %22
  %26 = load i8*, i8** %11, align 8
  %27 = load i8, i8* %7, align 1
  %28 = call i8* @strchr(i8* %26, i8 signext %27)
  store i8* %28, i8** %11, align 8
  %29 = load i8*, i8** %11, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %31, label %34

31:                                               ; preds = %25
  %32 = load i8*, i8** %11, align 8
  %33 = getelementptr inbounds i8, i8* %32, i32 1
  store i8* %33, i8** %11, align 8
  br label %34

34:                                               ; preds = %31, %25
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %14, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %14, align 4
  br label %22

38:                                               ; preds = %22
  %39 = load i32*, i32** %8, align 8
  %40 = load i32, i32* %14, align 4
  %41 = call i32* @apr_array_make(i32* %39, i32 %40, i32 8)
  store i32* %41, i32** %13, align 8
  br label %42

42:                                               ; preds = %53, %52, %38
  %43 = load i8*, i8** %9, align 8
  %44 = getelementptr inbounds [2 x i8], [2 x i8]* %12, i64 0, i64 0
  %45 = call i8* @apr_strtok(i8* %43, i8* %44, i8** %11)
  store i8* %45, i8** %10, align 8
  %46 = icmp ne i8* %45, null
  br i1 %46, label %47, label %58

47:                                               ; preds = %42
  %48 = load i8*, i8** %10, align 8
  %49 = load i8, i8* %48, align 1
  %50 = sext i8 %49 to i32
  %51 = icmp eq i32 %50, 0
  br i1 %51, label %52, label %53

52:                                               ; preds = %47
  br label %42

53:                                               ; preds = %47
  %54 = load i8*, i8** %10, align 8
  %55 = load i32*, i32** %13, align 8
  %56 = call i64 @apr_array_push(i32* %55)
  %57 = inttoptr i64 %56 to i8**
  store i8* %54, i8** %57, align 8
  store i8* null, i8** %9, align 8
  br label %42

58:                                               ; preds = %42
  %59 = load i32*, i32** %13, align 8
  %60 = load i32**, i32*** %5, align 8
  store i32* %59, i32** %60, align 8
  %61 = load i32, i32* @APR_SUCCESS, align 4
  ret i32 %61
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i8* @apr_pstrdup(i32*, i8*) #2

declare dso_local i8* @strchr(i8*, i8 signext) #2

declare dso_local i32* @apr_array_make(i32*, i32, i32) #2

declare dso_local i8* @apr_strtok(i8*, i8*, i8**) #2

declare dso_local i64 @apr_array_push(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
